[package]
name = "polygon-arbitrage-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
ethers = { version = "2.0", features = ["rustls"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenvy = "0.15"
rand = "0.9.2"
